--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,15 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Roboto;
+}
+
 .main-body {
-  width: 100vw;
-  height: 100vh;
+  position: relative;
+  width: 1280px;
+  height: 800px;
   font-size: 0;
 }
 
@@ -24,4 +33,13 @@
   width: 30%;
   height: 100%;
   background-color: #003164;
+}
+
+.main-body > .panel {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 48px 0 0 85px;
 }
