--- a/src/todolist/TodoBody.module.css
+++ b/src/todolist/TodoBody.module.css
@@ -4,7 +4,6 @@
 }
 
 .ul-list {
-  margin-top: 20px;
   padding: 0;
   list-style-type: none;
 }
@@ -18,24 +17,9 @@
   border-bottom: 1px solid rgba(0, 49, 100, 0.2);
 }
 
-.ul-list > li > i {
+.ul-list > li > .circle {
   position: relative;
   top: 4px;
   vertical-align: top;
   margin-right: 6px;
 }
-
-/* .ul-list > li:before {
-  content: '';
-  position: relative;
-  top: 4px;
-  display: inline-block;
-  vertical-align: top;
-  width: 16px;
-  height: 16px;
-  margin-right: 6px;
-  background: none;
-  border: 1px solid #003164;
-  border-radius: 50%;
-  cursor: pointer;
-} */
